...
import RNPickerSelect from 'react-native-picker-select';

export default class Input extends PureComponent {
  static propTypes = {};

  static defaultProps: Props = {
    errorText: 'This field is required.',
    isFail: false,
    isPicker: false,
  };

  render() {
    const {
...
